# litkitchen-server

./: .gitignore  .pre-commit-config.yaml  .windsurfrules  Dockerfile  README.md  convert_stories_to_textvariants.py  dev-plan.md  docker-compose.yml  pyproject.toml  pytest.ini  run_with_ngrok.sh
docs/: ddd-structure.md  dev-plan.md  high-level-design.md  install-printer.md  tasks.md
litkitchen_server/: api.py  application.py  cli_textvariant.py  domain.py  infrastructure.py  main.py  models.py  repository.py  schemas.py  settings.py
litkitchen_server/api/: routers.py  schemas.py
litkitchen_server/api_endpoints/: barcodemapping.py  options.py  printjob.py  textvariant.py
litkitchen_server/application/: services.py  state.py  worker.py
litkitchen_server/domain/: models.py  repository.py
litkitchen_server/infrastructure/: barcode_mapping_repository.py  drink_style_repository.py  main_dish_text_repository.py  models.py  print_job_repository.py  printer.py  repository_provider.py  repository_sqlite.py  side_dish_media_repository.py  text_variant_repository.py
nginx/: litkitchen.conf.tpl
script/: deploy-cloudflare-tunnel.sh  gen_nginx_conf.py  gen_systemd_service.py  install.sh  litkitchen-server.service  litkitchen-server.service.tpl  setup_systemd_service.sh
sql/: schema.sql
tests/: conftest.py  fixtures_options.py  test_barcodemapping_e2e.py  test_cli_textvariant_e2e.py  test_options_e2e.py  test_printer_status.py  test_printjob_e2e.py  test_repository.py  test_system_state_e2e.py  test_textvariant_e2e.py
tests/fixtures/: example_textvariant.csv
(+1 files in other folders)
