[project]
name = "litkitchen-server"
version = "0.1.0"
description = ""
authors = [
    {name = "icycandle",email = "icycandle@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.1"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "python-escpos (>=3.1,<4.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "dateutils (>=0.6.12,<0.7.0)",
    "typer (>=0.15.3,<0.16.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"

